# dfl

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
dfl/: CMakeLists.txt
dfl/include/dfl/: Alloc.h  Object.h  Types.h
dfl/include/dfl/io/: SafeHandle.h  SafeHandleStream.h  Stream.h
dfl/include/dfl/net/: NamedPipeClientStream.h  NamedPipeServerStream.h  NamedPipeStream.h
dfl/include/dfl/task/: ChaseLevDeque.h  FAAQueue.h  Job.h  Task.h  Worker.h  WorkerGroup.h
dfl/lib/: Alloc.cxx  Object.cxx
dfl/lib/io/: NamedPipeClientStream.cxx  NamedPipeServerStream.cxx  NamedPipeServerStream.unix.cxx  NamedPipeServerStream.windows.cxx  SafeHandleStream.unix.cxx  SafeHandleStream.windows.cxx  Stream.cxx
dfl/lib/net/: NamedPipeClientStream.unix.cxx  NamedPipeClientStream.windows.cxx  NamedPipeServerStream.unix.cxx  NamedPipeServerStream.windows.cxx
dfl/lib/task/: ChaseLevDeque.cxx  FAAQueue.cxx  Job.cxx  Worker.cxx  WorkerGroup.cxx
test/: CMakeLists.txt  main.cxx
